fix(resultado-quiz): set minimum width for steps to improve layout on mobile

--- a/src/app/modules/dashboard/pages/public/resultado-quiz/resultado-quiz.component.scss
+++ b/src/app/modules/dashboard/pages/public/resultado-quiz/resultado-quiz.component.scss
@@ -274,7 +274,7 @@ h1 {
   }
 
   .step {
-    min-width: unset;
+    min-width: 450px;
     padding: 10px 4px;
     font-size: 15px;
     text-align: center; // garante centralização no mobile
